Learning-docker/terraform-only/terraform/security-groups.tf
resource "aws_security_group" "tf-sg" {
  name        = "tf-sg"
  description = "Security group for EC2 terraform Instances"
  vpc_id      = "${var.vpc_preconf_id}"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "tf-sg"
  }
}
